ed_swj/webapi/backgroundtasks.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: backgroundtasks-svc            #服务名字
  namespace: swjapi               #命名空间
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: backgroundtasks           #        
  type: ClusterIP     #注意新的GCP上需要指定为 ClusterIP 如果原始的NodePort 会出现router一直加载中 
  ports:
  - protocol: TCP   
    port: 10001  
    targetPort: 10001
    name: swjapi
