ed_swj/webapi/productproxy_api.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: productproxy-svc         #服务名字
  namespace: swjapi         #命名空间
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: productproxy-api        #        
  type: ClusterIP
  ports:
  - protocol: TCP   
    port: 10001  
    targetPort: 10001
    name: swjapi
