ed_swj/webapi/proxy_node.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: proxy-service            #服务名字
  namespace: swjapi         #命名空间
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: proxy-tunnel           #
  type: ClusterIP
  ports:
  - protocol: TCP   
    port: 1433  
    targetPort: 10001
