ed_swj/webapi/tunnel_db.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: tunnel-db-svc            #服务名字
  namespace: swjapi         #命名空间
spec:
  selector:
    app: tunnel-db
  type: ClusterIP     #注意新的GCP上需要指定为 ClusterIP 如果原始的NodePort 会出现router一直加载中 
  ports:
  - protocol: TCP   
    port: 1461  
    targetPort: 1461
    name: d62
  - protocol: TCP   
    port: 1462 
    targetPort: 1462
    name: d63
  - protocol: TCP   
    port: 1463  
    targetPort: 1463
    name: d64
  - protocol: TCP   
    port: 1464  
    targetPort: 1464
    name: d61
  - protocol: TCP   
    port: 1465 
    targetPort: 1465
    name: d65
  - protocol: TCP   
    port: 1466  
    targetPort: 1466
    name: d66
  - protocol: TCP   
    port: 1467  
    targetPort: 1467
    name: d67
