ed_swj/webapi/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ed-router
  namespace: swjapi
  annotations:
    cloud.google.com/backend-config: '{"default": "be-config"}'
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
spec:
  rules:
  - host: "swjapi.cdweinet.com"
    http:
      paths:
      - path: /activities/
        pathType: Prefix
        backend:
          service:
            name: activies-svc
            port:
              number: 10001
      - path: /callcenter/
        pathType: Prefix
        backend:
          service:
            name: callcenter-svc
            port:
              number: 10001
      - path: /cash/
        pathType: Prefix
        backend:
          service:
            name: cash-svc
            port:
              number: 10001
      - path: /credit/
        pathType: Prefix
        backend:
          service:
            name: credit-svc
            port:
              number: 10001
      - path: /maintain/
        pathType: Prefix
        backend:
          service:
            name: maintain-svc
            port:
              number: 10001
      - path: /message/
        pathType: Prefix
        backend:
          service:
            name: msg-svc
            port:
              number: 10001
      - path: /paychange/
        pathType: Prefix
        backend:
          service:
            name: paychange-svc
            port:
              number: 10001
      - path: /product/
        pathType: Prefix
        backend:
          service:
            name: product-svc
            port:
              number: 10001
      - path: /system/
        pathType: Prefix
        backend:
          service:
            name: system-svc
            port:
              number: 10001
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 10001
      - path: /warning/
        pathType: Prefix
        backend:
          service:
            name: warning-svc
            port:
              number: 10001
  - host: "swjco.cdweinet.com"
    http:
      paths:
      - path: /hangfire/
        pathType: Prefix
        backend:
          service:
            name: backgroundtasks-svc
            port:
              number: 10001
      # - path: /wsdemo/
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: wsdemo-svc
      #       port:
      #         number: 10001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edco-ui-svc
            port:
              number: 8080
  - host: "swjagapi.cdweinet.com"
    http:
      paths:
      - path: /activities/
        pathType: Prefix
        backend:
          service:
            name: activies-svc
            port:
              number: 10001
      - path: /message/
        pathType: Prefix
        backend:
          service:
            name: msg-svc
            port:
              number: 10001
      - path: /product/
        pathType: Prefix
        backend:
          service:
            name: product-svc
            port:
              number: 10001
      - path: /system/
        pathType: Prefix
        backend:
          service:
            name: system-svc
            port:
              number: 10001
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 10001
  - host: "swjag.cdweinet.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edag-ui-svc
            port:
              number: 8080 
  - host: "swjseq.cdweinet.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seq-svc
            port:
              number: 5342
